jdk-17-panama+3-167 updates (ResourceScope, lib loading + configuration).